// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cart Item renders without crashing 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CartItem />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": <div
        className="card bg-light text-center col-md-12"
      >
        <div
          className="card-header col-md-2"
        >
          <PizzaSVG
            className="pizzaSVG"
            viewBox="0 0 58 58"
            xmlns="http://www.w3.org/2000/svg"
          />
        </div>
        <div
          className="card-body col-md-8"
        >
          <div
            className="col-md-6 info"
          >
            <h5
              className="card-title"
              id="pizzaName"
            >
              Pizza size - 
              default pizza
            </h5>
            <p
              className="card-text"
              id="pizzaMaxToppings"
            >
              Max Toppings - 
              unlimited toppings!
            </p>
            <p
              className="card-text"
              id="pizzaBasePrice"
            >
              Base price - $
              0
            </p>
          </div>
          <div
            className="col-md-6 info"
          >
            <ul>
              <li>
                <h5
                  className="card-title"
                >
                  Toppings
                </h5>
              </li>
            </ul>
          </div>
        </div>
        <div
          className="card-footer col-md-2"
        >
          <p
            className="card-text"
            id="pizzaTotalPrice"
          >
            Total price - $
            0
          </p>
          <Button
            className="btn btn-danger"
            handleClick={[Function]}
            label="remove pizza"
          />
        </div>
      </div>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="card-header col-md-2"
          >
            <PizzaSVG
              className="pizzaSVG"
              viewBox="0 0 58 58"
              xmlns="http://www.w3.org/2000/svg"
            />
          </div>,
          <div
            className="card-body col-md-8"
          >
            <div
              className="col-md-6 info"
            >
              <h5
                className="card-title"
                id="pizzaName"
              >
                Pizza size - 
                default pizza
              </h5>
              <p
                className="card-text"
                id="pizzaMaxToppings"
              >
                Max Toppings - 
                unlimited toppings!
              </p>
              <p
                className="card-text"
                id="pizzaBasePrice"
              >
                Base price - $
                0
              </p>
            </div>
            <div
              className="col-md-6 info"
            >
              <ul>
                <li>
                  <h5
                    className="card-title"
                  >
                    Toppings
                  </h5>
                </li>
              </ul>
            </div>
          </div>,
          <div
            className="card-footer col-md-2"
          >
            <p
              className="card-text"
              id="pizzaTotalPrice"
            >
              Total price - $
              0
            </p>
            <Button
              className="btn btn-danger"
              handleClick={[Function]}
              label="remove pizza"
            />
          </div>,
        ],
        "className": "card bg-light text-center col-md-12",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <PizzaSVG
              className="pizzaSVG"
              viewBox="0 0 58 58"
              xmlns="http://www.w3.org/2000/svg"
            />,
            "className": "card-header col-md-2",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "className": "pizzaSVG",
              "viewBox": "0 0 58 58",
              "xmlns": "http://www.w3.org/2000/svg",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="col-md-6 info"
              >
                <h5
                  className="card-title"
                  id="pizzaName"
                >
                  Pizza size - 
                  default pizza
                </h5>
                <p
                  className="card-text"
                  id="pizzaMaxToppings"
                >
                  Max Toppings - 
                  unlimited toppings!
                </p>
                <p
                  className="card-text"
                  id="pizzaBasePrice"
                >
                  Base price - $
                  0
                </p>
              </div>,
              <div
                className="col-md-6 info"
              >
                <ul>
                  <li>
                    <h5
                      className="card-title"
                    >
                      Toppings
                    </h5>
                  </li>
                </ul>
              </div>,
            ],
            "className": "card-body col-md-8",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <h5
                    className="card-title"
                    id="pizzaName"
                  >
                    Pizza size - 
                    default pizza
                  </h5>,
                  <p
                    className="card-text"
                    id="pizzaMaxToppings"
                  >
                    Max Toppings - 
                    unlimited toppings!
                  </p>,
                  <p
                    className="card-text"
                    id="pizzaBasePrice"
                  >
                    Base price - $
                    0
                  </p>,
                ],
                "className": "col-md-6 info",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "Pizza size - ",
                      "default pizza",
                    ],
                    "className": "card-title",
                    "id": "pizzaName",
                  },
                  "ref": null,
                  "rendered": Array [
                    "Pizza size - ",
                    "default pizza",
                  ],
                  "type": "h5",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "Max Toppings - ",
                      "unlimited toppings!",
                    ],
                    "className": "card-text",
                    "id": "pizzaMaxToppings",
                  },
                  "ref": null,
                  "rendered": Array [
                    "Max Toppings - ",
                    "unlimited toppings!",
                  ],
                  "type": "p",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "Base price - $",
                      0,
                    ],
                    "className": "card-text",
                    "id": "pizzaBasePrice",
                  },
                  "ref": null,
                  "rendered": Array [
                    "Base price - $",
                    0,
                  ],
                  "type": "p",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <ul>
                  <li>
                    <h5
                      className="card-title"
                    >
                      Toppings
                    </h5>
                  </li>
                </ul>,
                "className": "col-md-6 info",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <li>
                      <h5
                        className="card-title"
                      >
                        Toppings
                      </h5>
                    </li>,
                    Array [],
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <h5
                        className="card-title"
                      >
                        Toppings
                      </h5>,
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "Toppings",
                        "className": "card-title",
                      },
                      "ref": null,
                      "rendered": "Toppings",
                      "type": "h5",
                    },
                    "type": "li",
                  },
                ],
                "type": "ul",
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <p
                className="card-text"
                id="pizzaTotalPrice"
              >
                Total price - $
                0
              </p>,
              <Button
                className="btn btn-danger"
                handleClick={[Function]}
                label="remove pizza"
              />,
            ],
            "className": "card-footer col-md-2",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "Total price - $",
                  0,
                ],
                "className": "card-text",
                "id": "pizzaTotalPrice",
              },
              "ref": null,
              "rendered": Array [
                "Total price - $",
                0,
              ],
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "className": "btn btn-danger",
                "handleClick": [Function],
                "label": "remove pizza",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <div
          className="card bg-light text-center col-md-12"
        >
          <div
            className="card-header col-md-2"
          >
            <PizzaSVG
              className="pizzaSVG"
              viewBox="0 0 58 58"
              xmlns="http://www.w3.org/2000/svg"
            />
          </div>
          <div
            className="card-body col-md-8"
          >
            <div
              className="col-md-6 info"
            >
              <h5
                className="card-title"
                id="pizzaName"
              >
                Pizza size - 
                default pizza
              </h5>
              <p
                className="card-text"
                id="pizzaMaxToppings"
              >
                Max Toppings - 
                unlimited toppings!
              </p>
              <p
                className="card-text"
                id="pizzaBasePrice"
              >
                Base price - $
                0
              </p>
            </div>
            <div
              className="col-md-6 info"
            >
              <ul>
                <li>
                  <h5
                    className="card-title"
                  >
                    Toppings
                  </h5>
                </li>
              </ul>
            </div>
          </div>
          <div
            className="card-footer col-md-2"
          >
            <p
              className="card-text"
              id="pizzaTotalPrice"
            >
              Total price - $
              0
            </p>
            <Button
              className="btn btn-danger"
              handleClick={[Function]}
              label="remove pizza"
            />
          </div>
        </div>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="card-header col-md-2"
            >
              <PizzaSVG
                className="pizzaSVG"
                viewBox="0 0 58 58"
                xmlns="http://www.w3.org/2000/svg"
              />
            </div>,
            <div
              className="card-body col-md-8"
            >
              <div
                className="col-md-6 info"
              >
                <h5
                  className="card-title"
                  id="pizzaName"
                >
                  Pizza size - 
                  default pizza
                </h5>
                <p
                  className="card-text"
                  id="pizzaMaxToppings"
                >
                  Max Toppings - 
                  unlimited toppings!
                </p>
                <p
                  className="card-text"
                  id="pizzaBasePrice"
                >
                  Base price - $
                  0
                </p>
              </div>
              <div
                className="col-md-6 info"
              >
                <ul>
                  <li>
                    <h5
                      className="card-title"
                    >
                      Toppings
                    </h5>
                  </li>
                </ul>
              </div>
            </div>,
            <div
              className="card-footer col-md-2"
            >
              <p
                className="card-text"
                id="pizzaTotalPrice"
              >
                Total price - $
                0
              </p>
              <Button
                className="btn btn-danger"
                handleClick={[Function]}
                label="remove pizza"
              />
            </div>,
          ],
          "className": "card bg-light text-center col-md-12",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <PizzaSVG
                className="pizzaSVG"
                viewBox="0 0 58 58"
                xmlns="http://www.w3.org/2000/svg"
              />,
              "className": "card-header col-md-2",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "className": "pizzaSVG",
                "viewBox": "0 0 58 58",
                "xmlns": "http://www.w3.org/2000/svg",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="col-md-6 info"
                >
                  <h5
                    className="card-title"
                    id="pizzaName"
                  >
                    Pizza size - 
                    default pizza
                  </h5>
                  <p
                    className="card-text"
                    id="pizzaMaxToppings"
                  >
                    Max Toppings - 
                    unlimited toppings!
                  </p>
                  <p
                    className="card-text"
                    id="pizzaBasePrice"
                  >
                    Base price - $
                    0
                  </p>
                </div>,
                <div
                  className="col-md-6 info"
                >
                  <ul>
                    <li>
                      <h5
                        className="card-title"
                      >
                        Toppings
                      </h5>
                    </li>
                  </ul>
                </div>,
              ],
              "className": "card-body col-md-8",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <h5
                      className="card-title"
                      id="pizzaName"
                    >
                      Pizza size - 
                      default pizza
                    </h5>,
                    <p
                      className="card-text"
                      id="pizzaMaxToppings"
                    >
                      Max Toppings - 
                      unlimited toppings!
                    </p>,
                    <p
                      className="card-text"
                      id="pizzaBasePrice"
                    >
                      Base price - $
                      0
                    </p>,
                  ],
                  "className": "col-md-6 info",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        "Pizza size - ",
                        "default pizza",
                      ],
                      "className": "card-title",
                      "id": "pizzaName",
                    },
                    "ref": null,
                    "rendered": Array [
                      "Pizza size - ",
                      "default pizza",
                    ],
                    "type": "h5",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        "Max Toppings - ",
                        "unlimited toppings!",
                      ],
                      "className": "card-text",
                      "id": "pizzaMaxToppings",
                    },
                    "ref": null,
                    "rendered": Array [
                      "Max Toppings - ",
                      "unlimited toppings!",
                    ],
                    "type": "p",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        "Base price - $",
                        0,
                      ],
                      "className": "card-text",
                      "id": "pizzaBasePrice",
                    },
                    "ref": null,
                    "rendered": Array [
                      "Base price - $",
                      0,
                    ],
                    "type": "p",
                  },
                ],
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <ul>
                    <li>
                      <h5
                        className="card-title"
                      >
                        Toppings
                      </h5>
                    </li>
                  </ul>,
                  "className": "col-md-6 info",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <li>
                        <h5
                          className="card-title"
                        >
                          Toppings
                        </h5>
                      </li>,
                      Array [],
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": <h5
                          className="card-title"
                        >
                          Toppings
                        </h5>,
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": "Toppings",
                          "className": "card-title",
                        },
                        "ref": null,
                        "rendered": "Toppings",
                        "type": "h5",
                      },
                      "type": "li",
                    },
                  ],
                  "type": "ul",
                },
                "type": "div",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <p
                  className="card-text"
                  id="pizzaTotalPrice"
                >
                  Total price - $
                  0
                </p>,
                <Button
                  className="btn btn-danger"
                  handleClick={[Function]}
                  label="remove pizza"
                />,
              ],
              "className": "card-footer col-md-2",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "Total price - $",
                    0,
                  ],
                  "className": "card-text",
                  "id": "pizzaTotalPrice",
                },
                "ref": null,
                "rendered": Array [
                  "Total price - $",
                  0,
                ],
                "type": "p",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "className": "btn btn-danger",
                  "handleClick": [Function],
                  "label": "remove pizza",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Pizza renders without crashing 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Pizza />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="card-header bg-inverse"
        >
          <PizzaSVG
            className="pizzaSVG"
            viewBox="0 0 58 58"
            xmlns="http://www.w3.org/2000/svg"
          />
          <div
            className="info"
          >
            <h5
              className="card-title"
              id="pizzaName"
            >
              Pizza size - 
              default pizza
            </h5>
            <p
              className="card-text"
              id="pizzaMaxToppings"
            >
              Max Toppings - 
              unlimited toppings!
            </p>
            <p
              className="card-text"
              id="pizzaBasePrice"
            >
              Base price - $
              0
            </p>
            <p
              className="card-text"
              id="pizzaTotalPrice"
            >
              Total price - $
              0
            </p>
          </div>
        </div>,
        <div
          className="card-body"
        >
          <Toppings
            toppings={Array []}
          />
          <Button
            className="btn btn-warning text-gray-dark"
            handleClick={[Function]}
            label="order pizza"
          />
        </div>,
      ],
      "className": "card bg-inverse text-white text-center col-md-3",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <PizzaSVG
              className="pizzaSVG"
              viewBox="0 0 58 58"
              xmlns="http://www.w3.org/2000/svg"
            />,
            <div
              className="info"
            >
              <h5
                className="card-title"
                id="pizzaName"
              >
                Pizza size - 
                default pizza
              </h5>
              <p
                className="card-text"
                id="pizzaMaxToppings"
              >
                Max Toppings - 
                unlimited toppings!
              </p>
              <p
                className="card-text"
                id="pizzaBasePrice"
              >
                Base price - $
                0
              </p>
              <p
                className="card-text"
                id="pizzaTotalPrice"
              >
                Total price - $
                0
              </p>
            </div>,
          ],
          "className": "card-header bg-inverse",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "className": "pizzaSVG",
              "viewBox": "0 0 58 58",
              "xmlns": "http://www.w3.org/2000/svg",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h5
                  className="card-title"
                  id="pizzaName"
                >
                  Pizza size - 
                  default pizza
                </h5>,
                <p
                  className="card-text"
                  id="pizzaMaxToppings"
                >
                  Max Toppings - 
                  unlimited toppings!
                </p>,
                <p
                  className="card-text"
                  id="pizzaBasePrice"
                >
                  Base price - $
                  0
                </p>,
                <p
                  className="card-text"
                  id="pizzaTotalPrice"
                >
                  Total price - $
                  0
                </p>,
              ],
              "className": "info",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "Pizza size - ",
                    "default pizza",
                  ],
                  "className": "card-title",
                  "id": "pizzaName",
                },
                "ref": null,
                "rendered": Array [
                  "Pizza size - ",
                  "default pizza",
                ],
                "type": "h5",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "Max Toppings - ",
                    "unlimited toppings!",
                  ],
                  "className": "card-text",
                  "id": "pizzaMaxToppings",
                },
                "ref": null,
                "rendered": Array [
                  "Max Toppings - ",
                  "unlimited toppings!",
                ],
                "type": "p",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "Base price - $",
                    0,
                  ],
                  "className": "card-text",
                  "id": "pizzaBasePrice",
                },
                "ref": null,
                "rendered": Array [
                  "Base price - $",
                  0,
                ],
                "type": "p",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "Total price - $",
                    0,
                  ],
                  "className": "card-text",
                  "id": "pizzaTotalPrice",
                },
                "ref": null,
                "rendered": Array [
                  "Total price - $",
                  0,
                ],
                "type": "p",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Toppings
              toppings={Array []}
            />,
            <Button
              className="btn btn-warning text-gray-dark"
              handleClick={[Function]}
              label="order pizza"
            />,
          ],
          "className": "card-body",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "disabledToppings": undefined,
              "toppings": Array [],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "className": "btn btn-warning text-gray-dark",
              "handleClick": [Function],
              "label": "order pizza",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="card-header bg-inverse"
          >
            <PizzaSVG
              className="pizzaSVG"
              viewBox="0 0 58 58"
              xmlns="http://www.w3.org/2000/svg"
            />
            <div
              className="info"
            >
              <h5
                className="card-title"
                id="pizzaName"
              >
                Pizza size - 
                default pizza
              </h5>
              <p
                className="card-text"
                id="pizzaMaxToppings"
              >
                Max Toppings - 
                unlimited toppings!
              </p>
              <p
                className="card-text"
                id="pizzaBasePrice"
              >
                Base price - $
                0
              </p>
              <p
                className="card-text"
                id="pizzaTotalPrice"
              >
                Total price - $
                0
              </p>
            </div>
          </div>,
          <div
            className="card-body"
          >
            <Toppings
              toppings={Array []}
            />
            <Button
              className="btn btn-warning text-gray-dark"
              handleClick={[Function]}
              label="order pizza"
            />
          </div>,
        ],
        "className": "card bg-inverse text-white text-center col-md-3",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <PizzaSVG
                className="pizzaSVG"
                viewBox="0 0 58 58"
                xmlns="http://www.w3.org/2000/svg"
              />,
              <div
                className="info"
              >
                <h5
                  className="card-title"
                  id="pizzaName"
                >
                  Pizza size - 
                  default pizza
                </h5>
                <p
                  className="card-text"
                  id="pizzaMaxToppings"
                >
                  Max Toppings - 
                  unlimited toppings!
                </p>
                <p
                  className="card-text"
                  id="pizzaBasePrice"
                >
                  Base price - $
                  0
                </p>
                <p
                  className="card-text"
                  id="pizzaTotalPrice"
                >
                  Total price - $
                  0
                </p>
              </div>,
            ],
            "className": "card-header bg-inverse",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "className": "pizzaSVG",
                "viewBox": "0 0 58 58",
                "xmlns": "http://www.w3.org/2000/svg",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <h5
                    className="card-title"
                    id="pizzaName"
                  >
                    Pizza size - 
                    default pizza
                  </h5>,
                  <p
                    className="card-text"
                    id="pizzaMaxToppings"
                  >
                    Max Toppings - 
                    unlimited toppings!
                  </p>,
                  <p
                    className="card-text"
                    id="pizzaBasePrice"
                  >
                    Base price - $
                    0
                  </p>,
                  <p
                    className="card-text"
                    id="pizzaTotalPrice"
                  >
                    Total price - $
                    0
                  </p>,
                ],
                "className": "info",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "Pizza size - ",
                      "default pizza",
                    ],
                    "className": "card-title",
                    "id": "pizzaName",
                  },
                  "ref": null,
                  "rendered": Array [
                    "Pizza size - ",
                    "default pizza",
                  ],
                  "type": "h5",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "Max Toppings - ",
                      "unlimited toppings!",
                    ],
                    "className": "card-text",
                    "id": "pizzaMaxToppings",
                  },
                  "ref": null,
                  "rendered": Array [
                    "Max Toppings - ",
                    "unlimited toppings!",
                  ],
                  "type": "p",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "Base price - $",
                      0,
                    ],
                    "className": "card-text",
                    "id": "pizzaBasePrice",
                  },
                  "ref": null,
                  "rendered": Array [
                    "Base price - $",
                    0,
                  ],
                  "type": "p",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      "Total price - $",
                      0,
                    ],
                    "className": "card-text",
                    "id": "pizzaTotalPrice",
                  },
                  "ref": null,
                  "rendered": Array [
                    "Total price - $",
                    0,
                  ],
                  "type": "p",
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <Toppings
                toppings={Array []}
              />,
              <Button
                className="btn btn-warning text-gray-dark"
                handleClick={[Function]}
                label="order pizza"
              />,
            ],
            "className": "card-body",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "disabledToppings": undefined,
                "toppings": Array [],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "className": "btn btn-warning text-gray-dark",
                "handleClick": [Function],
                "label": "order pizza",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
